Fixed unit tests running